codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__terminal_app_ssh_startup.snap
---
source: tui/src/startup_draft_tests.rs
expression: "frames.join(\"\\n---\\n\").replace(crate::version::CODEX_CLI_VERSION, \"<VERSION>\")"
---
terminal_app_over_ssh=false, owned=true
╭───────────────────────────────────────╮
│ >_ Shortcut (v<VERSION>)                  │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯







› Ask Shortcut to do anything

  ? for shortcuts
---
terminal_app_over_ssh=true, owned=false
╭───────────────────────────────────────╮
│ >_ Shortcut (v<VERSION>)                  │
│                                       │
│ model:     loading   /model to change │
│ directory: loading                    │
╰───────────────────────────────────────╯


› Ask Shortcut to do anything

  ? for shortcuts
